@@ -51,6 +51,7 @@ class ConfigManager(object):
             'client.maximize': False,
             'client.save_width_height': True,
             'client.save_tree_state': True,
+            'client.fast_tabbing': True,
             'client.spellcheck': False,
             'client.lang': locale.getdefaultlocale()[0],
             'client.language_direction': 'ltr',
